@@ -2,7 +2,6 @@ package com.gentics.mesh.core.endpoint.admin;
 
 import static com.gentics.mesh.http.HttpConstants.APPLICATION_JSON;
 import static com.gentics.mesh.http.HttpConstants.APPLICATION_YAML;
-import static com.gentics.mesh.http.HttpConstants.APPLICATION_YAML_UTF8;
 import static io.netty.handler.codec.http.HttpResponseStatus.OK;
 import static io.vertx.core.http.HttpMethod.GET;
 
@@ -11,13 +10,11 @@ import javax.inject.Inject;
 import com.gentics.mesh.auth.MeshAuthChain;
 import com.gentics.mesh.context.InternalActionContext;
 import com.gentics.mesh.example.RestInfoExamples;
-import com.gentics.mesh.generator.RAMLGenerator;
 import com.gentics.mesh.rest.InternalEndpointRoute;
 import com.gentics.mesh.router.RouterStorage;
 import com.gentics.mesh.router.route.AbstractInternalEndpoint;
 
 import io.vertx.core.Vertx;
-import io.vertx.core.http.HttpHeaders;
 import io.vertx.ext.web.Router;
 
 public class RestInfoEndpoint extends AbstractInternalEndpoint {
@@ -52,6 +49,7 @@ public class RestInfoEndpoint extends AbstractInternalEndpoint {
 	@Override
 	public void registerEndPoints() {
 
+		secure("/raml");
 		InternalEndpointRoute endpoint = createRoute();
 		endpoint.path("/raml");
 		endpoint.method(GET);
@@ -60,12 +58,11 @@ public class RestInfoEndpoint extends AbstractInternalEndpoint {
 		endpoint.exampleResponse(OK, "Not yet specified");
 		endpoint.produces(APPLICATION_YAML);
 		endpoint.blockingHandler(rc -> {
-			RAMLGenerator generator = new RAMLGenerator();
-			String raml = generator.generate();
-			rc.response().putHeader(HttpHeaders.CONTENT_TYPE, APPLICATION_YAML_UTF8);
-			rc.response().end(raml);
+			InternalActionContext ac = wrap(rc);
+			adminHandler.handleRAML(ac);
 		}, false);
 
+		secure("/");
 		InternalEndpointRoute infoEndpoint = createRoute();
 		infoEndpoint.path("/");
 		infoEndpoint.description("Endpoint which returns version information");
