@@ -14,8 +14,10 @@ import com.gentics.mesh.cli.BootstrapInitializer;
 import com.gentics.mesh.core.endpoint.admin.LocalConfigApi;
 import com.gentics.mesh.etc.config.MeshOptions;
 import com.gentics.mesh.graphdb.spi.Database;
+import com.gentics.mesh.graphql.context.GraphQLContext;
 import com.gentics.mesh.search.SearchProvider;
 
+import graphql.schema.DataFetchingEnvironment;
 import graphql.schema.GraphQLFieldDefinition;
 import graphql.schema.GraphQLObjectType;
 import graphql.schema.GraphQLObjectType.Builder;
@@ -51,7 +53,7 @@ public class MeshTypeProvider {
 		root.name(MESH_TYPE_NAME);
 		root.description("Mesh version information");
 		root.field(newFieldDefinition().name("meshVersion").description("Version of mesh").type(GraphQLString).dataFetcher((env) -> {
-			if (options.getHttpServerOptions().isServerTokens()) {
+			if (isTokenAllowed(env)) {
 				return Mesh.getPlainVersion();
 			} else {
 				return null;
@@ -61,7 +63,7 @@ public class MeshTypeProvider {
 		// .meshNodeId
 		root.field(newFieldDefinition().name("meshNodeId").description("Node id of this mesh instance").type(GraphQLString)
 			.dataFetcher((env) -> {
-				if (options.getHttpServerOptions().isServerTokens()) {
+				if (isTokenAllowed(env)) {
 					return boot.mesh().getOptions().getNodeName();
 				} else {
 					return null;
@@ -71,7 +73,7 @@ public class MeshTypeProvider {
 		// .databaseVendor
 		root.field(newFieldDefinition().name("databaseVendor").description("Name of the graph database vendor").type(GraphQLString)
 				.dataFetcher((env) -> {
-					if (options.getHttpServerOptions().isServerTokens()) {
+					if (isTokenAllowed(env)) {
 						return db.getVendorName();
 					} else {
 						return null;
@@ -81,7 +83,7 @@ public class MeshTypeProvider {
 		// .databaseVersion
 		root.field(newFieldDefinition().name("databaseVersion").description("Version of the used graph database").type(GraphQLString)
 				.dataFetcher(env -> {
-					if (options.getHttpServerOptions().isServerTokens()) {
+					if (isTokenAllowed(env)) {
 						return db.getVersion();
 					} else {
 						return null;
@@ -96,7 +98,7 @@ public class MeshTypeProvider {
 		// .searchVersion
 		root.field(
 				newFieldDefinition().name("searchVersion").description("Version of the used search index").type(GraphQLString).dataFetcher(env -> {
-					if (options.getHttpServerOptions().isServerTokens()) {
+					if (isTokenAllowed(env)) {
 						return searchProvider.getVersion();
 					} else {
 						return null;
@@ -105,7 +107,7 @@ public class MeshTypeProvider {
 
 		// .vertxVersion
 		root.field(newFieldDefinition().name("vertxVersion").description("Vert.x version").type(GraphQLString).dataFetcher((env) -> {
-			if (options.getHttpServerOptions().isServerTokens()) {
+			if (isTokenAllowed(env)) {
 				return VersionCommand.getVersion();
 			} else {
 				return null;
@@ -125,6 +127,11 @@ public class MeshTypeProvider {
 			.dataFetcher(env -> localConfigApi.getActiveConfig().blockingGet()));
 
 		return root.build();
+	}
+
+	private boolean isTokenAllowed(DataFetchingEnvironment env) {
+		GraphQLContext gc = env.getContext();
+		return options.getHttpServerOptions().isServerTokens() || gc.isAdmin();
 	}
 
 	public GraphQLFieldDefinition createMeshFieldType() {
